...
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            SizedBox(height: 30),
            Center(child:Image.asset('lib/view/assets/logo.png',height: 150)),
            Center(
              child:
            Text('Iniciar sesión',key:Key('Tittle'),style: TextStyle(fontSize: 30,fontWeight: FontWeight.bold),),
            ),
            SizedBox(height: 30),
            Center(
              child: Column(
                crossAxisAlignment: CrossAxisAlignment.start, // Alinea el texto y el campo de entrada a la izquierda dentro del ancho definido
                mainAxisSize: MainAxisSize.min, // Ajusta la altura de la columna a sus contenidos
...
            ),

            SizedBox(height: 100),
            Center(
              child:
              CustomButton(
                key: Key('login_button'),
                value: 'Iniciar sesión',
                color: Color(0xFFA2DAF1),
                onPressed: () {
                  controller.login(context);
                },
              ),
...
