...
                  ],
                ),
              ),
              SizedBox(height: 75),
              Center(
                child: CustomButton(
                  key: Key('register_button'),
                  value: 'Registrarse',
                  color: Color(0xFFA2DAF1),
                  onPressed: () async {
                    await controller.register(context);
                    controller.nameController.text = '';
                    controller.passwordController.text = '';
...
